extends Control



func _on_chapter_1011_checkpoint_pressed() -> void:
	get_tree().change_scene_to_file("res://Chapters/chapter_10_11_checkpoint.tscn")


func _on_chapter_11_exam_pressed() -> void:
	get_tree().change_scene_to_file("res://Chapters/chapter_11_exam.tscn")


func _on_chapter_11_match_questions_pressed() -> void:
	get_tree().change_scene_to_file("res://Chapters/chapter_11_match_questions.tscn")
